# cg-morthing

src/App/: CMakeLists.txt  Duck.cpp  Duck.h  Morth.cpp  Morth.h  Window.cpp  Window.h  main.cpp  resources.qrc
src/App/Shaders/: diffuse.fs  diffuse.vs  morth.fs  morth.vs
src/Base/: GLWidget.hpp
